src/test/deca/context/invalid/string-int-affectation.deca
// Description:
//    Affectation et typage (string - int)
//
// Resultats:
//    Ligne 13: Affectation de types incompatibles.
//

{
   int a;
   string b;

   // Doit etre refuse.
   a = b;
}
